Add proper analysis